data/derived/sp14/progs/unify/prog2040.ml.out
Characters 53-57:
  if y = true 
         ^^^^
Error: This expression has type bool but an expression was expected of type
         int
